<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RegistrationActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txtRegisterHereTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/RegisterHereTitle"
            android:textColor="@color/colorTheme"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtRegisterHereTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:autofillHints="@string/txtEmailAddress" />

        <EditText
            android:id="@+id/txtSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/Surname"
            android:inputType="textPersonName"
            android:autofillHints="@string/Surname" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtSurname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/txtEmailAddress"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/txtEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="@string/txtEmailAddress" />

        <EditText
            android:id="@+id/txtMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/Mobile"
            android:hint="@string/Mobile"
            android:inputType="phone" />

        <LinearLayout
            android:id="@+id/genderGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtMobile"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtLoginWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="5"
                android:text="@string/Genderlabel"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/genderOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_weight="5">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:text="@string/GenderGroupMale"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@color/colorTheme" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:text="@string/GenderGroupFemale"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@color/colorTheme" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/genderGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/colorTheme"
            android:onClick="processRegistration"
            android:text="@string/CreateAccount"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/txtRegisterHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnCreateAccount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="processLogin"
            android:text="@string/txtLoginHere"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />
    </RelativeLayout>
</RelativeLayout>