<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:contentDescription="@string/generalLogoDescription"
            android:src="@mipmap/sisonkelogo"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/txtLoginWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/sisonkeWelcomMessage"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLoginWelcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/txtEmailAddress"
            android:hint="@string/txtEmailAddress"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:onClick="processLogin"
            android:text="@string/login"
            android:textColor="@android:color/background_light"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnCreateAccount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="processRegistration"
            android:text="@string/txtRegisterHere"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />
    </RelativeLayout>
</RelativeLayout>