<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".AccountBalanceActivity">


    <TextView
        android:id="@+id/txtTransferTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ViewAccountBalanceTitle"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblAccountHolderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/AccountHolderName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTransferTitle" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@+id/lblAccountHolderName"
        app:layout_constraintTop_toBottomOf="@+id/txtTransferTitle" />

    <TextView
        android:id="@+id/lblAccountHolderSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/AccountHolderSurname"
        app:layout_constraintStart_toStartOf="@+id/lblAccountHolderName"
        app:layout_constraintTop_toBottomOf="@+id/lblAccountHolderName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/surname"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblAccountHolderSurname"
        app:layout_constraintStart_toEndOf="@+id/lblAccountHolderSurname" />

    <TextView
        android:id="@+id/lblCurrentAccountBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/CurrentAccountBalance"
        app:layout_constraintStart_toStartOf="@+id/lblAccountHolderSurname"
        app:layout_constraintTop_toBottomOf="@+id/lblAccountHolderSurname" />

    <TextView
        android:id="@+id/txtCurrentBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblCurrentAccountBalance"
        app:layout_constraintStart_toEndOf="@+id/lblCurrentAccountBalance" />

    <TextView
        android:id="@+id/lblSavingsAccountBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/SavingsAccountBalance"
        app:layout_constraintStart_toStartOf="@+id/lblCurrentAccountBalance"
        app:layout_constraintTop_toBottomOf="@+id/lblCurrentAccountBalance" />

    <TextView
        android:id="@+id/txtSavingsBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblSavingsAccountBalance"
        app:layout_constraintStart_toEndOf="@+id/lblSavingsAccountBalance" />

</androidx.constraintlayout.widget.ConstraintLayout>