<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainPageActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txtLoginWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/WelcomeMesssage"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <Button
            android:id="@+id/btnAccountBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLoginWelcome"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/ViewAccountBalance"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btnAccountTransfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnAccountBalance"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/TransferBetweenAccounts"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnAccountTransfer"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/Logout"
            android:textColor="@android:color/background_light" />
    </RelativeLayout>
</RelativeLayout>